# document-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: High Level.mmd  Sequence diagram.mmd  structure.md
notebook/: 1-research.ipynb
src/: config.py  main.py
src/api/routes/: ingest.py  query.py
src/core/: chunker.py  embedder.py  llm_client.py  pdf_parser.py  pipeline.py  reranker.py  sparse.py  vector_store.py
src/utils/: check_services.py  logger.py
tests/: test_chuncker.py  test_pdf_parser.py
tests/integration/: test_pdf_parser_integration.py
