[project]
name = "document-rag"
version = "0.1.0"
description = "Document RAG using hybrid search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=0.3.4",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: external dependencies",
]
